--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*sigma aka xyz wuz here i recommend obfuscating it using https://cssobfuscator.com/*/
-
 /*removing horizontal scroll bar*/
 
 html, body {
@@ -10,7 +8,7 @@ html, body {
 /* black background*/
 
 body {
-    background-color: black;
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEUAAACnej3aAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII=");
 }
 
 /* text design*/
@@ -43,6 +41,14 @@ h2 {
     font-weight: 100;
 }
 
+/* More Text Design */
+h3 {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
+    text-align: center;
+    color: white;
+    font-weight: 100;
+}
 /*Input field design*/
 
 input {
@@ -79,7 +85,7 @@ button {
 
 video {
     background-color: rgb(32, 32, 32);
-    border-color: none;
+    border-color: white;
     cursor: pointer;
     border-radius: 20px;
     width: 550;
